--- a/KOMiT/KOMiT.Client/Components/CreateStandardPhase.razor
+++ b/KOMiT/KOMiT.Client/Components/CreateStandardPhase.razor
@@ -1,6 +1,7 @@
 ﻿@using KOMiT.Core.Model
 @inject HttpClient http
-@inject NavigationManager navManger 
+@inject NavigationManager navManger
+@inject ConfirmationService confirmationService
 
 
 <div class="row">
@@ -10,19 +11,33 @@
             <ValidationSummary />
 
             <div class="form-group">
-                <label >navn</label>
+                <label>navn</label>
                 <input @bind-value="standardPhase.Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label >Beskrivelse</label>
+                <label>Beskrivelse</label>
                 <input @bind-value="standardPhase.Description" class="form-control" />
                 <span asp-validation-for="Beskrivelse" class="text-danger"></span>
             </div>
-            </EditForm>
-            </div>
-            </div>
+        </EditForm>
+    </div>
+</div>
 
+
+@if (!string.IsNullOrEmpty(confirmationService.SuccessMessage))
+{
+    <div class="alert alert-success">
+        <b>@confirmationService.SuccessMessage</b>
+    </div>
+}
+
+@if (!string.IsNullOrEmpty(confirmationService.WarningMessage))
+{
+    <div class="alert alert-danger">
+        <b>@confirmationService.WarningMessage</b>
+    </div>
+}
 <button class="btn btn-primary" @onclick="Create"> Opret </button>
 
 @code {
@@ -34,7 +49,14 @@
 
         if (response.IsSuccessStatusCode)
         {
+            confirmationService.SetSuccessMessage("Standardphase oprettet succesfuldt!");
             navManger.NavigateTo("/");
+            
+        }
+        else
+        {
+            confirmationService.SetWarningMessage("Fejl ved oprettelse af standardphase. Prøv igen.");
         }
     }
+
 }
