--- a/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
+++ b/KOMiT/KOMiT.Client/Pages/ProjectDetails.razor
@@ -28,47 +28,64 @@
     </div>
 </div>
 
-<div style="margin-bottom: 30px;">
+
+
+<div style="margin-bottom: 50px;">
     <table class="main-table">
         <tbody>
             <tr>
-                <td> </td>
+                <td </td>
                 <td><a class="is-link" style="cursor: pointer;">Opstartsfase</a></td>
                 <td><a class="is-link" style="cursor: pointer;">Kravindsamling</a></td>
                 <td><a class="is-link" style="cursor: pointer;">High-level design</a></td>
                 <td><a class="is-link" style="cursor: pointer;">Low-level design</a></td>
                 <td><a class="is-link" style="cursor: pointer;">Programmering</a></td>
                 <td><a @onclick="() => PhaseDetails(ID)" class="is-link" style="cursor: pointer;">Testing</a></td>
+                <td class="bold-text">Samlet antal dage:</td>
             </tr>
             <tr>
                 <td class="bold-text">Status:</td>
-                <td>2,2</td>
-                <td>2,3</td>
-                <td>2,4</td>
-                <td>2,5</td>
-                <td>2,6</td>
-                <td>2,7</td>
-                <td>2,8</td>
+                <td class="bold-text">Færdiggjort<Icon Name="IconName.CircleFill" Color="IconColor.Success" /></td>
+                <td class="bold-text">Færdiggjort<Icon Name="IconName.CircleFill" Color="IconColor.Success" /></td>
+                <td class="bold-text">Færdiggjort<Icon Name="IconName.CircleFill" Color="IconColor.Success" /></td>
+                <td class="bold-text">Færdiggjort<Icon Name="IconName.CircleFill" Color="IconColor.Success" /></td>
+                <td class="bold-text">Færdiggjort<Icon Name="IconName.CircleFill" Color="IconColor.Success" /></td>
+                <td>
+                    <b> @_project.Status.ToString()</b>
+                    @if (_project.Status == Core.Model.Enum.Status.Aktiv)
+                    {
+                        <Icon Name="IconName.CircleFill" Color="IconColor.Warning" />
+                    }
+                    else if (_project.Status == Core.Model.Enum.Status.Inaktiv)
+                    {
+                        <Icon Name="IconName.CircleFill" Color="IconColor.Danger" />
+                    }
+                    else
+                    {
+                        <Icon Name="IconName.CircleFill" Color="IconColor.Success" />
+                    }
+                </td>
+                <td></td>
             </tr>
             <tr>
                 <td class="bold-text">Estimeret dage:</td>
-                <td>3,2</td>
-                <td>3,3</td>
-                <td>3,4</td>
-                <td>3,5</td>
-                <td>3,6</td>
-                <td>3,7</td>
-                <td>3,8</td>
+                <td>30</td>
+                <td>60</td>
+                <td>50</td>
+                <td>50</td>
+                <td>200</td>
+                <td>100</td>
+                <td>490</td>
             </tr>
             <tr>
                 <td class="bold-text">Realiseret dage:</td>
-                <td>4,2</td>
-                <td>4,3</td>
-                <td>4,4</td>
-                <td>4,5</td>
-                <td>4,6</td>
-                <td>4,7</td>
-                <td>4,8</td>
+                <td>40</td>
+                <td>50</td>
+                <td>100</td>
+                <td>80</td>
+                <td>300</td>
+                <td></td>
+                <td>580</td>
             </tr>
         </tbody>
     </table>
@@ -77,10 +94,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5">
-            <PieChart @ref="pieChart" Width="450" />
+            <PieChart @ref="pieChart" Width="350" />
         </div>
         <div class="col-md-7">
-            <LineChart @ref="lineChart" Width="850" />
+            <LineChart @ref="lineChart" Width="730" />
         </div>
     </div>
 </div>
@@ -88,7 +105,7 @@
 
 <style>
     .main-table {
-        width: 100%;
+        width: 90%;
         border-collapse: collapse;
         margin-top: 20px;
         background-color: aliceblue;
@@ -200,34 +217,34 @@
     {
         var data = new ChartData
             {
-                Labels = new List<string> { "Opstartsfasen", "Kravindsamling", "High-level Design", "Low-level Design", "Programmering", "Testing"},
+                Labels = new List<string> { "Opstartsfasen", "Kravindsamling", "High-level Design", "Low-level Design", "Programmering", "Testing" },
                 Datasets = new List<IChartDataset>()
             {
                 new LineChartDataset()
                 {
                     Label = "Realiserede dage",
-                    Data = new List<double>{ 9, 20, 29, 33, 50, 66 },
-                    BackgroundColor = new List<string>{ "#20c997" },
-                    BorderColor = new List<string>{ "#20c997" },
+                    Data = new List<double>{ 40, 50, 100, 80, 300, 0 },
+                    BackgroundColor = new List<string>{ "rgb(104, 187, 196)" },
+                    BorderColor = new List<string>{ "rgb(104, 187, 196)" },
                     BorderWidth = new List<double>{2},
                     HoverBorderWidth = new List<double>{4},
-                    PointBackgroundColor = new List<string>{ "#20c997" },
-                    PointBorderColor = new List<string>{ "#20c997" },
-                    PointRadius = new List<int>{0}, 
+                    PointBackgroundColor = new List<string>{ "rgb(104, 187, 196)" },
+                    PointBorderColor = new List<string>{ "rgb(104, 187, 196)" },
+                    PointRadius = new List<int>{0},
                     PointHoverRadius = new List<int>{4},
                 },
 
                 new LineChartDataset()
                 {
                     Label = "Estimerede dage",
-                    Data = new List<double>{ 14, 22, 25, 50, 60, 67 },
-                    BackgroundColor = new List<string>{ "#0d6efd" },
-                    BorderColor = new List<string>{ "0d6efd" },
+                    Data = new List<double>{ 30, 60, 50, 50, 200, 100 },
+                    BackgroundColor = new List<string>{ "rgb(80, 135, 236)" },
+                    BorderColor = new List<string>{ "rgb(80, 135, 236)" },
                     BorderWidth = new List<double>{2},
                     HoverBorderWidth = new List<double>{4},
-                    PointBackgroundColor = new List<string>{ "0d6efd" },
-                    PointBorderColor = new List<string>{ "0d6efd" },
-                    PointRadius = new List<int>{0}, 
+                    PointBackgroundColor = new List<string>{ "rgb(80, 135, 236)" },
+                    PointBorderColor = new List<string>{ "rgb(80, 135, 236)" },
+                    PointRadius = new List<int>{0},
                     PointHoverRadius = new List<int>{4},
                 },
 
@@ -239,12 +256,6 @@
         options.Interaction.Mode = InteractionMode.Index;
 
         options.Responsive = true;
-
-        //options.Scales.X.Title.Text = "Faser";
-        //options.Scales.X.Title.Display = true;
-
-        //options.Scales.Y.Title.Text = "Antal dage";
-        //options.Scales.Y.Title.Display = true;
 
         await lineChart.InitializeAsync(data, options);
     }
