--- a/KOMiT/KOMiT.Client/Shared/MainLayout.razor
+++ b/KOMiT/KOMiT.Client/Shared/MainLayout.razor
@@ -40,7 +40,7 @@
         navItems = new List<NavItem>
         {
             new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, IconColor = IconColor.Primary, Text = "Projekter", Match=NavLinkMatch.All},
-            new NavItem { Id = "2", Href = "/counter", IconName = IconName.PeopleFill,IconColor = IconColor.Primary, Text = "Ansatte"},
+            new NavItem { Id = "2", Href = "/employee", IconName = IconName.PeopleFill,IconColor = IconColor.Primary, Text = "Ansatte"},
             new NavItem { Id = "3", Href = "/fetchdata", IconName = IconName.FileEarmarkArrowDownFill,IconColor = IconColor.Primary, Text = "Rapport"},
             new NavItem { Id = "4", Href = "/swagger", IconName = IconName.DatabaseFillExclamation, IconColor = IconColor.Primary, Text = "swagger"},
         };
