--- a/KOMiT/KOMiT.Client/Pages/EmployeeIndex.razor
+++ b/KOMiT/KOMiT.Client/Pages/EmployeeIndex.razor
@@ -45,7 +45,7 @@ else
         <GridColumn TItem="Employee" HeaderText="Kompetencer" SortKeySelector="Item => Item.Name">
             <div style="text-align:left">
                 <a class="is-link" style="cursor: pointer;"> @context.Name kompetencer</a>
-                <Tooltip Title="Info">
+                <Tooltip Title="@($"{string.Join(", ", context.Competences?.Select(c => c.Title))}")">
                     <Icon Name="IconName.InfoCircleFill" Color="IconColor.Primary" />
                 </Tooltip>
             </div>
