--- a/KOMiT/KOMiT.Client/Components/UpdateProject.razor
+++ b/KOMiT/KOMiT.Client/Components/UpdateProject.razor
@@ -5,42 +5,42 @@
 
 <div class="row">
     <div class="col-md-4">
-        <EditForm class="container" Model="project" OnInvalidSubmit="@Update">
+        <EditForm class="container" Model="Project" OnInvalidSubmit="@Update">
             <DataAnnotationsValidator />
             <ValidationSummary />
             <div class="form-group">
                 <label>Projektnavn</label>
-                <input @bind-value="project.Name" class="form-control" />
+                <input @bind-value="Project.Name" class="form-control" />
                 <span asp-validation-for="Projektnavn" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Beskrivelse</label>
-                <input @bind-value="project.Description" class="form-control" />
+                <input @bind-value="Project.Description" class="form-control" />
                 <span asp-validation-for="Beskrivelse" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Projekttype</label>
-                <input @bind-value="project.ProjectType" class="form-control" />
+                <input @bind-value="Project.ProjectType" class="form-control" />
                 <span asp-validation-for="Projekttype" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Prioritet</label>
-                <input @bind-value="project.Priority" class="form-control" />
+                <input @bind-value="Project.Priority" class="form-control" />
                 <span asp-validation-for="Prioritet" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Status</label>
-                <input @bind-value="project.Status" class="form-control" />
+                <input @bind-value="Project.Status" class="form-control" />
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Startdato</label>
-                <input @bind-value="project.EstimatedStartDate" class="form-control" />
+                <input @bind-value="Project.EstimatedStartDate" class="form-control" />
                 <span asp-validation-for="Startdato" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Slutdato</label>
-                <input @bind-value="project.EstimatedEndDate" class="form-control" />
+                <input @bind-value="Project.EstimatedEndDate" class="form-control" />
                 <span asp-validation-for="slutdato" class="text-danger"></span>
             </div>
             <div style="margin-top:10px;">
@@ -56,28 +56,31 @@
     public int ID { get; set; }
 
     [Parameter]
-    public Project? project { get; set; }
+    public Project? Project { get; set; }
 
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
+    [Parameter]
+    public EventCallback EventCallback { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
-        
+
     }
 
     private async Task Update()
     {
-        var response = await http.PostAsJsonAsync("https://localhost:7282/api/Project/UpdateProject", project);
+        var response = await http.PostAsJsonAsync("https://localhost:7282/api/Project/UpdateProject", Project);
 
         if (response.IsSuccessStatusCode)
         {
             confirmationService.SetSuccessMessage("Projektet er opdateret!");
-            navManger.NavigateTo("/");
+            EventCallback.InvokeAsync();
         }
         else
         {
-            confirmationService.SetWarningMessage("Fejl ved opdatering af Projekt. Prøv igen.");
+            confirmationService.SetWarningMessage("Fejl ved opdatering af projektet. Prøv igen.");
         }
     }
 }
