--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -19,16 +19,30 @@ else
                 <CreateProject OnClick="OnHideModalClickAddProject">
                 </CreateProject>
             </BodyTemplate>
-            
         </Modal>
+        
+        <Modal @ref="modalUpdateProject"> 
+            <BodyTemplate>
+                <UpdateProject Project="selectedProject" OnClick="OnHideModalUpdateProjectClick" EventCallback="OnHideModalUpdateProjectClick">
+        </UpdateProject>
+        </BodyTemplate>
+        </Modal>
+
+        <Modal @ref="modalFinishProject">
+            <BodyTemplate>
+                <FinishProject Project="selectedProject"  OnClick="OnHideModalFinishProjectClick">
+
+                </FinishProject>
+            </BodyTemplate>
+        </Modal>
+
+
 
         <Modal @ref="modal" Title="Opret standardfase">
             <BodyTemplate>
                 <CreateStandardPhase OnClick="OnHideModalClick">
                 </CreateStandardPhase>
             </BodyTemplate>
-            <FooterTemplate>
-            </FooterTemplate>
         </Modal>
     </div>
     <Grid DataProvider="ProjectDataProvider" HeaderRowCssClass="bg-secondary text-white border-bottom-0" TItem="Project" AllowPaging="true" PageSize="12" AllowSorting="true">
@@ -65,9 +79,9 @@ else
             <Dropdown AutoClose="true">
                 <DropdownToggleButton Color="ButtonColor.None"><Icon Name="IconName.PlusCircleFill" Color="IconColor.Primary" /></DropdownToggleButton>
                 <DropdownMenu>
-                    <DropdownItem To="#" Type="ButtonType.Link"> <Icon Name="IconName.CheckSquareFill" Color="IconColor.Primary" /> Afslut</DropdownItem>
-                    <DropdownItem To="#" Type="ButtonType.Link"> <Icon Name="IconName.PencilSquare" Color="IconColor.Primary" /> Rediger</DropdownItem>
-                    <DropdownItem To="#" Type="ButtonType.Link"> <Icon Name="IconName.Trash3Fill" Color="IconColor.Primary" /> Slet</DropdownItem>
+                    <DropdownItem @onclick="async () => await OnShowModalFinishhProjectClick(context)" Type="ButtonType.Link"> <Icon Name="IconName.CheckSquareFill" Color="IconColor.Primary" /> Afslut</DropdownItem>
+                    <DropdownItem @onclick="async () => await OnShowModalUpdatehProjectClick(context)" Type="ButtonType.Link"> <Icon Name="IconName.PencilSquare" Color="IconColor.Primary" /> Rediger</DropdownItem>
+                    <DropdownItem @onclick="@(async () => await DeleteProject(context.Id))" Type="ButtonType.Link"> <Icon Name="IconName.Trash3Fill" Color="IconColor.Primary" /> Slet</DropdownItem>
                 </DropdownMenu>
             </Dropdown>
         </GridColumn>
@@ -122,6 +136,10 @@ else
     private ICollection<Project>? Projects { get; set; }
     private Modal modal;
     private Modal modalAddProject;
+    private Modal modalFinishProject;
+    private Modal modalUpdateProject;
+    private Project selectedProject;
+
 
 
     protected override async Task OnInitializedAsync()
@@ -163,6 +181,37 @@ else
         await modalAddProject.HideAsync();
     }
 
-    
+    private async Task DeleteProject(int id)
+    {
+        await _httpClient.DeleteAsync($"https://localhost:7282/api/project/DeleteProject/{id}");
+        navigationManager.NavigateTo("/", true);
+
+    }
+    private void SelectedProject(Project project)
+    {
+        selectedProject = project;
+    }
+    private async Task OnShowModalFinishhProjectClick(Project project)
+    {
+        SelectedProject(project);
+        await modalFinishProject.ShowAsync();
+    }
+
+    private async Task OnHideModalFinishProjectClick()
+    {
+        await modalFinishProject.HideAsync();
+    }
+
+    private async Task OnShowModalUpdatehProjectClick(Project project) 
+    {
+        SelectedProject(project);
+        await modalUpdateProject.ShowAsync();
+    }
+
+    private async Task OnHideModalUpdateProjectClick()
+    {
+        await modalUpdateProject.HideAsync();
+    }
+
     }
 }
