--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -23,7 +23,7 @@ else
         
         <Modal @ref="modalUpdateProject"> 
             <BodyTemplate>
-                <UpdateProject Project="selectedProject" OnClick="OnHideModalUpdateProjectClick" EventCallback="OnHideModalUpdateProjectClick">
+                <UpdateProject Project="selectedProject" OnClick="OnHideModalUpdateProjectClick" OnUpdate="OnHideModalUpdateProjectClick">
         </UpdateProject>
         </BodyTemplate>
         </Modal>
