Added some validation logic

--- a/KOMiT/KOMiT.Client/Components/CreateCurrentSubGoal.razor
+++ b/KOMiT/KOMiT.Client/Components/CreateCurrentSubGoal.razor
@@ -21,7 +21,7 @@
             </div>
             <div style="margin-top:10px;">
             <Button Color="ButtonColor.Secondary" @onclick="OnClick">Luk</Button>
-            <Button Color="ButtonColor.Primary" @onclick="Create"> Opret</Button>
+            <Button Color="ButtonColor.Primary" Type="ButtonType.Submit" @onclick="Create"> Opret</Button>
             </div>
         </EditForm>
 
